# aletheon

./: .aletheon-audit.jsonl  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  architecture-status.toml  justfile  setup.sh
crates/agora/: Cargo.toml
crates/agora/src/: blackboard.rs  lib.rs  ops.rs  persistence.rs  trace.rs  workspace.rs
crates/agora/tests/: broadcast_delivery.rs  candidate_selection.rs  field_modulation_store.rs  transaction_integrity.rs
crates/aletheon/: Cargo.toml
crates/aletheon-abi/: Cargo.toml
crates/aletheon-abi/src/: agent.rs  brain.rs  bus_handle.rs  capability.rs  compaction.rs  context.rs  dasein.rs  envelope.rs  error.rs  event.rs  event_bus.rs  evolution.rs  execpolicy.rs  genome.rs  ipc_types.rs  lib.rs  llm_types.rs  memory.rs  message.rs  meta.rs  observable.rs  paths.rs  permission.rs  protocol.rs  resource.rs  runtime.rs  sandbox.rs  self_field.rs  subsystem.rs  tool.rs  transport.rs  ui_event.rs
crates/aletheon-abi/tests/: execpolicy_tests.rs  mock_subsystems.rs
crates/aletheon-body/: Cargo.toml
crates/aletheon-body/src/: lib.rs
crates/aletheon-brain/: Cargo.toml
crates/aletheon-brain/src/: lib.rs
crates/aletheon-cli/: Cargo.toml
crates/aletheon-cli/src/: main.rs
crates/aletheon-comm/: Cargo.toml
crates/aletheon-comm/src/: lib.rs
crates/aletheon-comm/tests/: protocol_e2e.rs
crates/aletheon-memory/: Cargo.toml
crates/aletheon-memory/src/: activation.rs  consolidation.rs  decay.rs  episodic.rs  lib.rs  procedural.rs  router.rs  schema.rs  self_memory.rs  semantic.rs
crates/aletheon-meta/: Cargo.toml
crates/aletheon-meta/src/: lib.rs
crates/aletheon-runtime/: Cargo.toml
crates/aletheon-runtime/docs/: coordinator-design.md
crates/aletheon-runtime/src/: lib.rs
crates/aletheon-runtime/tests/: agent_process_test.rs  evolution_integration.rs  genome_runtime_mapping.rs  kernel_test.rs  module_handlers.rs  runtime_tests.rs  self_evolution_loop_test.rs  verdict_handler_tests.rs
crates/aletheon-self/: Cargo.toml
crates/aletheon-self/src/: lib.rs
crates/aletheon-self/tests/: awareness_e2e.rs  self_evolution_e2e.rs
crates/aletheon/src/: acp.rs  main.rs  workspace.rs
crates/aletheon/tests/: arbitrary_workspace_e2e.rs  extension_cli_gate.rs  host_routing.rs  workspace_cli.rs
crates/aletheond/: Cargo.toml
crates/aletheond/src/: main.rs
crates/cognit/: Cargo.toml  README.md
crates/cognit/src/: lib.rs
crates/cognit/tests/: anthropic_provider_timeout.rs  cognitive_session.rs  conscious_batch_order.rs  facade_contract.rs  grpc_policy_provider.rs  openai_provider_timeout.rs  robot_harness.rs  skill_proposal.rs
crates/corpus/: Cargo.toml  README.md
crates/corpus/src/: lib.rs  service.rs
crates/corpus/tests/: agent_control_tools.rs  capability_executor.rs  controlled_apply.rs  extension_catalog.rs  gmail_history_sync.rs  google_delta_sync.rs  google_read_only.rs  service_contract.rs  workspace_sandbox.rs
crates/dasein/: Cargo.toml  README.md
crates/dasein/src/: lib.rs
crates/dasein/tests/: awareness_e2e.rs  conscious_field_feedback.rs  dasein_ledger_replay.rs  dasein_runtime_lifecycle.rs  dasein_transition_contract.rs  self_evolution_e2e.rs  visual_perception.rs
crates/drivers/: Cargo.toml  README.md
crates/exec-server/: Cargo.toml
crates/exec-server/src/: filesystem.rs  main.rs  process.rs  protocol.rs  sandbox.rs
crates/exec-server/tests/: protocol_integration.rs
crates/execd/: Cargo.toml
crates/execd/src/: filesystem.rs  main.rs  process.rs  protocol.rs
crates/execd/tests/: protocol_integration.rs
crates/executive/: Cargo.toml
crates/executive/docs/: coordinator-design.md
crates/executive/fuzz/: Cargo.toml
crates/executive/src/: lib.rs  service.rs  user_runtime.rs
crates/executive/tests/: admin_service.rs  agent_admission.rs  agent_agora_projection.rs  agent_cleanup.rs  agent_context_projection.rs  agent_control_operations.rs  agent_control_repository.rs  agent_control_service.rs  agent_control_spawn.rs  agent_integration_baseline.rs  agent_mailbox.rs  agent_memory_isolation.rs  agent_memory_promotion.rs  agent_process_test.rs  agent_recovery.rs  agora_bound_permit.rs  agora_integration.rs  approval_channel.rs  approval_goal_flow.rs  approval_service.rs  approved_apply_flow.rs  attempt_coordinator.rs  budget_quota_lease.rs  capability_invoker.rs  capability_path.rs  channel_dispatcher.rs  channel_router.rs  chronos.rs  coding_goal_flow.rs  coding_metacog_adapter.rs  coding_metacog_e2e.rs  coding_metacog_rubric.rs  coding_production_e2e.rs  conscious_action_outcome.rs  conscious_arbitration.rs  conscious_core_recurrence.rs  conscious_processors.rs  conscious_workspace_production.rs  context_assembler.rs  context_space.rs  (+100 more)
crates/fabric/: Cargo.toml  README.md
crates/fabric/examples/: export_session_schema.rs
crates/fabric/src/: lib.rs  ops.rs
crates/fabric/tests/: agent_control_contract.rs  canonical_event_bus.rs  client_rpc_reflect.rs  event_spine_contract.rs  execpolicy_tests.rs  expected_outcome_schema.rs  extension_contract.rs  frame_contract.rs  kernel_lifecycle_contract.rs  local_authority_contract.rs  mailbox.rs  metacognition_contract.rs  mock_subsystems.rs  outcome_verification_schema.rs  protocol_e2e.rs  protocol_schema.rs  session_contract.rs  skill_proposal.rs  stream_backpressure.rs  user_runtime_paths.rs  workspace_broadcast_contract.rs  workspace_candidate_contract.rs  workspace_resolution.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: dispatcher.rs  effect.rs  intent.rs  lib.rs  notify.rs  ports.rs  registry.rs
crates/hardware/: Cargo.toml  build.rs
crates/hardware/src/: broker.rs  clock.rs  command.rs  deployment_gate.rs  device.rs  emergency_stop.rs  lease.rs  lib.rs  observation.rs  provider.rs  registry.rs  safety.rs  simulator.rs  (+2 more)
crates/interact/: Cargo.toml  README.md
crates/kernel/: Cargo.toml
crates/memory/: Cargo.toml
crates/metacog/: Cargo.toml  README.md
crates/mnemosyne/: Cargo.toml  README.md
crates/platform-linux/: Cargo.toml
crates/platform-macos/: Cargo.toml
(+3291 files in other folders)
