[workspace]
resolver = "2"
members = [
    "crates/aletheond",
    "crates/aletheon-cli",
    "crates/aletheon-abi",
    "crates/aletheon-comm",
    "crates/aletheon-memory",
    "crates/aletheon-self-field",
    "crates/aletheon-brain-core",
    "crates/aletheon-body",
    "crates/aletheon-runtime",
    "crates/aletheon-meta",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
bitflags = "2"
bincode = "1"
libc = "0.2"
toml = "0.8"
regex = "1"
hmac = "0.12"
sha2 = "0.10"
urlencoding = "2"
nix = { version = "0.29", features = ["user", "ioctl"] }
dashmap = "6"
tokio-util = "0.7"
