[workspace]
resolver = "2"
members = [
    "crates/bin",
    "crates/fabric",
    "crates/cognit",
    "crates/corpus",
    "crates/dasein",
    "crates/interact",
    "crates/mnemosyne",
    "crates/agora",
    "crates/metacog",
    "crates/kernel",
    "crates/executive",
    "examples/basic-agent",
    "examples/self-evolution-loop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
aes-gcm = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
bitflags = "2"
bincode = "1"
libc = "0.2"
toml = "0.8"
regex = "1"
hmac = "0.12"
sha2 = "0.10"
urlencoding = "2"
nix = { version = "0.29", features = ["user", "ioctl"] }
dashmap = "6"
tokio-util = "0.7"
walkdir = "2"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"

[workspace.lints.rust]
# Placeholder features for future use (io_uring, ebpf, fuse, vector-*)
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("io_uring", "ebpf", "fuse", "vector-qdrant", "vector-lance"))',
] }
