[package]
name = "aletheon-abi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core trait definitions for the Aletheon runtime — zero implementations, only interfaces"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bincode = "1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
