[package]
name = "aletheon-abi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Aletheon ABI — shared traits, types, and error handling for the macro-kernel"

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
futures = "0.3"
base64 = "0.22"
png = "0.17"

[lints]
workspace = true
