[package]
name = "aletheon-body"
version.workspace = true
edition.workspace = true

[dependencies]
aletheon-abi = { path = "../aletheon-abi" }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "6"
tokio-util = "0.7"
futures = "0.3"
tempfile = "3"
which = "7"
hostname = "0.4"
walkdir = { workspace = true }
toml = "0.8"
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }

# TUI dependencies
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
clap = { version = "4", features = ["derive", "cargo"] }
atty = "0.2"
dirs-next = "2"

# Driver dependencies
libc = "0.2"
base64 = "0.22"
png = "0.17"
nix = { version = "0.29", features = ["user", "ioctl"], optional = true }
x11rb = { version = "0.13", features = ["allow-unsafe-code", "shm"], optional = true }
atspi = { version = "0.30", features = ["zbus"], optional = true }
tesseract = { version = "0.15", optional = true }
zbus = { version = "4", optional = true }

[features]
default = []
dbus = ["zbus"]
input = ["nix"]
display = ["nix", "x11rb"]
a11y = ["atspi"]
sandbox-primitives = ["nix"]
ocr = []
ocr-tesseract = ["ocr", "tesseract"]
cli = []

[[bin]]
name = "aletheon-body-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[dev-dependencies]
tokio-test = "0.4"
