[package]
name = "aletheon-brain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BrainCore — the cognitive computation engine for Aletheon. Handles 'how do I?' reasoning, planning, critique, reflection, and learning."

[dependencies]
aletheon-abi = { path = "../aletheon-abi" }
aletheon-body = { path = "../aletheon-body", features = ["input", "display", "a11y", "ocr"] }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
toml = "0.8"
