[package]
name = "aletheon-comm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "EventBus implementation for the Aletheon runtime"

[dependencies]
aletheon-abi = { path = "../aletheon-abi" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
nix = { workspace = true }
bincode = "1"
libc = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
