[package]
name = "aletheon-comm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Aletheon Communication layer - inter-process communication"

[dependencies]
aletheon-abi = { path = "../aletheon-abi" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
nix = { workspace = true }
bincode = "1"
libc = { workspace = true }
dashmap = "6"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
[lints]
workspace = true
