[package]
name = "aletheon-memory"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SQLite-backed memory backends for the Aletheon runtime"

[dependencies]
aletheon-abi = { path = "../aletheon-abi" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
