[package]
name = "aletheon-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
aletheon-abi = { path = "../aletheon-abi" }
aletheon-brain-core = { path = "../aletheon-brain-core" }
aletheon-body = { path = "../aletheon-body" }
aletheon-self-field = { path = "../aletheon-self-field" }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { workspace = true }
parking_lot = "0.12"
futures = "0.3"
toml = "0.8"
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }
regex = { workspace = true }
dirs = "5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
