[package]
name = "aletheon-self"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SelfField — the policy engine that reviews intents, enforces boundaries, resolves conflicts, and maintains identity continuity"

[dependencies]
aletheon-abi = { path = "../aletheon-abi" }
aletheon-body = { path = "../aletheon-body" }
aletheon-comm = { path = "../aletheon-comm" }
aletheon-memory = { path = "../aletheon-memory" }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
glob = "0.3"
toml = "0.8"
dirs = "5"
regex = "1"
libc = "0.2"

[features]
default = []
rollback-btrfs = []

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
