[package]
name = "aletheond"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aletheond"
path = "src/main.rs"

[dependencies]
aletheon-runtime = { path = "../aletheon-runtime" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
