[package]
name = "cognit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Aletheon Cognit core - reasoning, planning, and reflection"

[dependencies]
aletheon-kernel = { path = "../kernel" }
fabric = { path = "../fabric" }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
toml = "0.8"
