[package]
name = "corpus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core execution body — the minimal runtime for tool execution"

[dependencies]
base = { path = "../base" }
tools = { path = "../tools" }
security = { path = "../security" }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
