[package]
name = "corpus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core execution body — the minimal runtime for tool execution"

[dependencies]
cognit = { path = "../cognit" }
fabric = { path = "../fabric" }
aletheon-kernel = { path = "../kernel" }
mnemosyne = { path = "../mnemosyne" }
platform-api = { path = "../platform-api" }
anyhow = "1"
aes-gcm = { workspace = true }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
# From drivers
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
png = "0.17"
nix = { version = "0.29", features = ["user", "ioctl"], optional = true }
x11rb = { version = "0.13", features = ["allow-unsafe-code", "shm"], optional = true }
atspi = { version = "0.30", features = ["zbus"], optional = true }
tesseract = { version = "0.15", optional = true }
zbus = { version = "4", optional = true }
# From tools
reqwest = { version = "0.12", features = ["json", "stream"] }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tempfile = "3"
which = "7"
walkdir = { workspace = true }
toml = "0.8"
dirs = "5"
glob = "0.3"
regex = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
parking_lot = "0.12"
futures = "0.3"
sha2 = { workspace = true }
# From security

[features]
default = []
# From drivers
dbus = ["zbus"]
input = ["nix"]
display = ["nix", "x11rb"]
a11y = ["atspi"]
ocr = []
acix = ["input", "display", "a11y", "ocr"]
ocr-tesseract = ["ocr", "tesseract"]
# From security
sandbox-primitives = ["nix"]

[dev-dependencies]
tokio-test = "0.4"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
