[package]
name = "dasein"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Aletheon Self-evolution - reflection, behavior evolution, and genome generation"

[dependencies]
fabric = { path = "../fabric" }
aletheon-kernel = { path = "../kernel" }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
glob = "0.3"
toml = "0.8"
dirs = "5"
regex = "1"
libc = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = []
rollback-btrfs = []

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
[lints]
workspace = true
