[package]
name = "drivers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hardware drivers and platform adapters"

[dependencies]
base = { path = "../base" }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
png = "0.17"
nix = { version = "0.29", features = ["user", "ioctl"], optional = true }
x11rb = { version = "0.13", features = ["allow-unsafe-code", "shm"], optional = true }
atspi = { version = "0.30", features = ["zbus"], optional = true }
tesseract = { version = "0.15", optional = true }
zbus = { version = "4", optional = true }

[features]
default = []
dbus = ["zbus"]
input = ["nix"]
display = ["nix", "x11rb"]
a11y = ["atspi"]
ocr = []
ocr-tesseract = ["ocr", "tesseract"]

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
