[package]
name = "execd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
libc.workspace = true
which = "7"
platform = { path = "../platform" }
sha2.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
