[package]
name = "fabric"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Aletheon fabric contracts, shared types, communication, and runtime interfaces"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { workspace = true }
anyhow = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bincode = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { workspace = true }
toml = "0.8"

# Merged from comm crate
tracing = "0.1"
parking_lot = "0.12"
nix = { workspace = true }
libc = { workspace = true }
dashmap = "6"
png = "0.17"
base64 = "0.22"

[features]
default = []
io_uring = []
network-tests = []

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
