[package]
name = "gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Aletheon Gateway - neutral channel dispatch engine"

[dependencies]
fabric = { path = "../fabric" }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { workspace = true }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
