[package]
name = "hardware"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
fabric = { path = "../fabric" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
sha2 = { workspace = true }
