[package]
name = "memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Aletheon Memory system - episodic, semantic, and procedural memory"

[dependencies]
base = { path = "../base" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"

[features]
# Off by default: the cognitive MemoryRouter + semantic/procedural/self backends
# are not used by the live daemon (M-H Option A). Enable to build them.
default = []
cognitive-memory = []
