[package]
name = "mnemosyne"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Aletheon Memory system - episodic, semantic, and procedural memory"

[dependencies]
kernel = { path = "../kernel" }
fabric = { path = "../fabric" }
tokio = { version = "1", features = ["full"] }
tokio-util = { workspace = true }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
thiserror = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = { workspace = true }
parking_lot = "0.12"
dirs = "5"
reqwest = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
proptest = "1.11.0"

[features]
# Off by default: the cognitive MemoryRouter + semantic/procedural/self backends
# are not used by the live daemon (M-H Option A). Enable to build them.
default = []
cognitive-memory = []
vector-lance = []
vector-qdrant = []
# Off by default: LLM-powered synthesis (synthesize() pulls in model deps).
llm-synthesis = []
