[package]
name = "platform-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
platform-api = { path = "../platform-api" }
anyhow = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
sha2 = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
