[package]
name = "platform-macos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
platform-api = { path = "../platform-api" }
anyhow = { workspace = true }
async-trait = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
tokio = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
